[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "puritymonitor"
dynamic = ["version", "description"] # They are defined in `puritymonitor/__init__.py`
license = {file = "LICENSE"}
readme = "README.md"
authors = [
  {name = "Bastien Voirin"}
]
maintainers = [
  {name = "Bastien Voirin"}
]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib"
]
classifiers = [
  "Programming Language :: Python",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Physics"
]

[project.optional-dependencies]
dev = [
  "flit",
  "flit_core",
  "ruff"
]
doc = []
test = []

[project.urls]
Homepage = "https://github.com/bastienvoirin/puritymonitor"
Documentation = "https://github.com/bastienvoirin/puritymonitor/blob/main/docs/manual.pdf"
Repository = "https://github.com/bastienvoirin/puritymonitor.git"
Issues = "https://github.com/bastienvoirin/puritymonitor/issues"
Changelog = "https://github.com/bastienvoirin/puritymonitor/blob/main/CHANGELOG.md"
